--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_cache?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=000000
+spring.datasource.password=00000000
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #开启驼峰命名匹配规则
@@ -12,3 +12,5 @@ logging.level.com.atguigu.cache.mapper=debug
 
 #开启自动配置报告
 debug=true
+
+spring.redis.host=localhost
